--- a/client/dev/partials/projects/structure/collection-form-edition.html
+++ b/client/dev/partials/projects/structure/collection-form-edition.html
@@ -1,8 +1,8 @@
 <ol class="breadcrumb">
 	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.structure.basics" ng-bind="project.name"></a></li>
+	<li><a ui-sref="main.project.structure.basics">{{project.name|maxLength:50}}</a></li>
 	<li><a ui-sref="main.project.structure.collection_form_list" translate="project.collection_form_list"></a></li>
-	<li class="active">{{project.forms[currentFormIndex].name}}</li>
+	<li class="active">{{project.forms[currentFormIndex].name|maxLength:50}}</li>
 </ol>
 
 <div class="alert alert-danger noprint" ng-if="formUsage.length">
@@ -15,10 +15,6 @@
 	<div class="form-group" show-errors>
 		<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
 		<div class="col-sm-10">
-			<span class="help-block" style="margin-bottom: 2px">
-				<i class="fa fa-info-circle"></i>
-				Comment s'apelle la source de laquelle vous voulez extraire des données? Par exemple: "Dossier patient informatisé", "Registre des centre de santé", "Rapport du système national d'information sanitaire", ...
-			</span>
 
 			<input type="text"
 				   class="form-control"
@@ -28,19 +24,17 @@
 				   placeholder="{{'project.form_name_ph'|translate}}"
 				   required />
 			
-			<p class="help-block" ng-if="dataSourceForm.name.$error.required" translate="form.mandatory"></p>
+			<span class="help-block">
+				<i class="fa fa-info-circle"></i>
+				{{'project.collection_edit_help_name'|translate}}
+			</span>
+			<!-- <p class="help-block" ng-if="dataSourceForm.name.$error.required" translate="form.mandatory"></p> -->
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label for="collect-input" class="col-sm-2 control-label" translate="project.collect"></label>
 		<div class="col-sm-10">
-
-			<span class="help-block" style="margin-bottom: 2px">
-				<i class="fa fa-info-circle"></i>
-				Parmi les structures identifiées dans "Lieux de collecte", lesquelles font remonter cette source de donnée?
-			</span>
-
 			<select class="form-control" name="collect" id="collect-input" ng-model="project.forms[currentFormIndex].collect">
 				<option value="some_entity" translate="project.collects.some_entity"></option>
 				<option value="entity" translate="project.collects.entity"></option>
@@ -61,14 +55,19 @@
 		</div>
 	</div>
 
+	<div class="row" style="margin-top: -10px; margin-bottom: 10px;">
+		<div class="col-sm-2"></div>
+		<div class="col-sm-10">
+			<span class="help-block">
+				<i class="fa fa-info-circle"></i>
+				{{'project.collection_edit_help_sites'|translate}}
+			</span>
+		</div>
+	</div>
+
 	<div class="form-group">
 		<label for="periodicity-input" class="col-sm-2 control-label" translate="project.periodicity"></label>
 		<div class="col-sm-10">
-			<span class="help-block" style="margin-bottom: 2px">
-				<i class="fa fa-info-circle"></i>
-				À quelle fréquence ces données remontent-elles? Attention, cette fréquence est complétement decorrelée de la fréquence à laquelle le projet doit fournir du reporting.
-			</span>
-
 			<select class="form-control" name="periodicity" id="periodicity-input" ng-model="project.forms[currentFormIndex].periodicity">
 				<option value="day" translate="project.periodicities.day"></option>
 				<option value="week" translate="project.periodicities.week"></option>
@@ -77,6 +76,11 @@
 				<option value="year" translate="project.periodicities.year"></option>
 				<option value="free" translate="project.periodicities.free"></option>
 			</select>
+
+			<span class="help-block">
+				<i class="fa fa-info-circle"></i>
+				{{'project.collection_edit_help_periodicity'|translate}}
+			</span>
 		</div>
 	</div>
 
@@ -84,6 +88,11 @@
 		<label for="periodicity" class="col-sm-2 control-label" translate="project.specific_start"></label>
 		<div class="col-sm-10">
 			<optional-date ng-model="project.forms[currentFormIndex].start" default="project.start" message="project.same_as_start"></optional-date>
+
+			<span class="help-block">
+				<i class="fa fa-info-circle"></i>
+				{{'project.collection_edit_help_start'|translate}}
+			</span>
 		</div>
 	</div>
 
@@ -91,105 +100,98 @@
 		<label for="periodicity" class="col-sm-2 control-label" translate="project.specific_end"></label>
 		<div class="col-sm-10">
 			<optional-date ng-model="project.forms[currentFormIndex].end" default="project.end" message="project.same_as_end"></optional-date>
+
+			<span class="help-block">
+				<i class="fa fa-info-circle"></i>
+				{{'project.collection_edit_help_end'|translate}}
+			</span>
 		</div>
 	</div>
 
 	<legend translate="project.collection_form_structure"></legend>
 
+	<div ng-if="project.forms[currentFormIndex].elements.length === 0" translate="project.no_variable"></div>
+
 	<div ng-sortable="{handle: '.variable-handle'}">
 		<div class="panel panel-info" ng-repeat="(index, element) in project.forms[currentFormIndex].elements">
 			<div class="panel-heading">
-
 				<div class="pull-right">
-					<a href="#" class="btn btn-xxs btn-default variable-handle">
+					<a class="btn btn-xxs btn-default variable-handle">
 						<i class="fa fa-sort fa-fw"></i>
-						Restez appuyé pour glisser déposer
+						{{'project.press_to_drag'|translate}}
 					</a>
 
-					<a href="#" class="btn btn-xxs btn-danger">
+					<a class="btn btn-xxs btn-danger" ng-click="remove(element, project.forms[currentFormIndex].elements)">
 						<i class="fa fa-times"></i>
-						Supprimer cette variable
+						{{'project.remove_variable'|translate}}
 					</a>
 				</div>
 
 				<div class="panel-title">
-					<strong>Variable {{index + 1}}:</strong> {{element.name}}
+					<strong>{{'project.variable'|translate}} {{index + 1}}:</strong> {{element.name}}
 				</div>
 			</div>
 
 			<div class="panel-body">
 				<div class="form-group">
-					<label for="" class="col-sm-2 control-label">Que mesurez-vous?</label>
+					<label class="col-sm-2 control-label" translate="project.variable_name_label"></label>
 					<div class="col-sm-10">
-						<span class="help-block" style="margin-bottom: 2px">
-							<i class="fa fa-info-circle"></i>
-							Nommez la variable que vous voulez extraire de/du <code>{{project.forms[currentFormIndex].name}}</code>. Par exemple "Nombre de diagnostics effectués".
-						</span>
+						<input type="text" class="form-control" ng-model="element.name" placeholder="{{'project.variable_name_ph'|translate}}">
 
-						<input type="text" class="form-control" ng-model="element.name" placeholder="ex: Nombre de diagnostics effectués">
+						<span class="help-block">
+							<i class="fa fa-info-circle"></i>
+							<span translate="project.collection_edit_help_varname" translate-values="{name: project.forms[currentFormIndex].name}"></span>
+						</span>
 					</div>
 				</div>
 				
 				<div class="form-group">
-					<label for="" class="col-sm-2 control-label">Comment grouper les<br/>valeurs de plusieurs sites</label>
+					<label for="site-agg-select" class="col-sm-2 control-label" translate="project.site_agg_label"></label>
 					<div class="col-sm-10 form-control-static">
-
-						<span class="help-block" style="margin-bottom: 2px">
-							<i class="fa fa-info-circle"></i>
-							Dans un projet avec deux sites, si <code>{{element.name}}</code> vaut 10 pour un site, et 20 pour l'autre, que vaut-il pour le projet?
-						</span>
-
-						<select name="" id="" class="form-control">
-							<option value="">30 (la somme des valeurs)</option>
-							<option value="">15 (la moyenne des valeurs)</option>
-							<option value="">10 (la plus petite valeur)</option>
-							<option value="">20 (la plus grande valeur)</option>
-							<option value="">Impossible de faire ce calcul</option>
+						<select if="site-agg-select" class="form-control" ng-model="element.geoAgg">
+							<option value="sum" translate="project.aggregation.sum"></option>
+							<option value="average" translate="project.aggregation.average"></option>
+							<option value="highest" translate="project.aggregation.highest"></option>
+							<option value="lowest" translate="project.aggregation.lowest"></option>
+							<option value="none" translate="project.aggregation.none"></option>
 						</select>
+
+						<span class="help-block">
+							<i class="fa fa-info-circle"></i>
+							<span translate="project.collection_edit_help_geoagg" translate-values="{name: element.name}"></span>
+						</span>
 					</div>
 				</div>
 
 				<div class="form-group">
-					<label for="" class="col-sm-2 control-label">Comment grouper les<br/>valeurs de plusieurs périodes</label>
+					<label for="time-agg-select" class="col-sm-2 control-label" translate="project.time_agg_label"></label>
 					<div class="col-sm-10 form-control-static">
-						<span class="help-block" style="margin-bottom: 2px">
-							<i class="fa fa-info-circle"></i>
-							Dans un projet qui collecte mensuellement, si
-							<code>{{element.name}}</code> vaut 10 en janvier, et 20 en
-							février et 30 en mars que vaut-il pour le premier trimestre?
-						</span>
-
-						<select name="" id="" class="form-control">
-							<option value="">60 (la somme des valeurs)</option>
-							<option value="">20 (la moyenne des valeurs)</option>
-							<option value="">10 (la plus petite valeur)</option>
-							<option value="">30 (la plus grande valeur)</option>
-							<option value="">30 (la dernière valeur)</option>
-							<option value="">Impossible de faire ce calcul</option>
+						<select id="time-agg-select" class="form-control" ng-model="element.timeAgg">
+							<option value="sum" translate="project.aggregation.sum"></option>
+							<option value="average" translate="project.aggregation.average"></option>
+							<option value="highest" translate="project.aggregation.highest"></option>
+							<option value="lowest" translate="project.aggregation.lowest"></option>
+							<option value="last" translate="project.aggregation.last"></option>
+							<option value="none" translate="project.aggregation.none"></option>
 						</select>
 
+						<span class="help-block">
+							<i class="fa fa-info-circle"></i>
+							<span translate="project.collection_edit_help_timeagg" translate-values="{name: element.name}"></span>
+						</span>
 					</div>
 				</div>
 				
 				<div class="form-group">
-					<label for="" class="col-sm-2 control-label">Quelles sont les désagrégations à utiliser sur cette variable?</label>
+					<label class="col-sm-2 control-label" translate="project.partitions_label"></label>
 					
 					<div class="col-sm-10 form-control-static">
-						<span class="help-block" style="margin-bottom: 2px">
-							<i class="fa fa-info-circle"></i>
-							Veut-t'on être capable de différencier <code>{{element.name}}</code> par age, sexe, prise en charge, motif de consultation, pathologie, tranche horaire, reférencement effectif, ...?
-						</span>
-
 						<div class="well" style="padding: 5px;">
 							<ul style="list-style-type: none; padding-left: 5px">
-								<li ng-if="element.partitions.length == 0">
-									Aucune partition disponible sur cette variable
-								</li>
+								<li ng-if="element.partitions.length == 0" translate="project.no_partitions"></li>
 
-								<li ng-repeat="partition in element.partitions" style="margin-bottom: 2px">
-
+								<li ng-repeat="partition in element.partitions">
 									<a ng-click="editPartition(element.partitions, partition)">
-
 										<i class="fa fa-pencil"></i>
 										<strong>{{partition.name}}</strong>
 										({{partition.elements|pluck:"name"|join:", "}})
@@ -202,49 +204,56 @@
 								<span translate="project.add_partition"></span>
 							</a>
 						</div>
+
+						<span class="help-block" style="margin-top: -10px">
+							<i class="fa fa-info-circle"></i>
+							<span translate="project.collection_edit_help_partition" translate-values="{name: element.name}"></span>
+						</span>
 					</div>
 				</div>
 
 				<div class="form-group" ng-if="element.partitions.length > 0">
-					<label for="" class="col-sm-2 control-label">
-						Où placer les intitulés des désagrégations dans les formulaires?
-					</label>
+					<label class="col-sm-2 control-label" translate="project.distribution_label"></label>
 
 					<div class="col-sm-10 form-control-static">
-						<span class="help-block" style="margin-bottom: 2px">
-							<i class="fa fa-info-circle"></i>
-							Cette disposition sera utilisée pour les formulaires de saisie en ligne, et pour les versions PDF à imprimer.
-						</span>
-
 						<partition-distribution ng-model="element.distribution" num-partitions="element.partitions.length"></partition-distribution>
+
+						<span class="help-block" style="margin-top: -10px">
+							<i class="fa fa-info-circle"></i>
+							{{'project.collection_edit_help_distribution'|translate}}
+						</span>
 					</div>
 				</div>
 
 				<div class="form-group" ng-if="element.partitions.length > 1">
-					<label for="" class="col-sm-2 control-label">
-						Dans quel ordre placer les intitulés des désagrégations dans les formulaires?
-					</label>
+					<label class="col-sm-2 control-label" translate="project.order_label"></label>
 
 					<div class="col-sm-10 form-control-static">
-
-						<span class="help-block" style="margin-bottom: 2px">
-							<i class="fa fa-info-circle"></i>
-							Cette disposition sera utilisée pour les formulaires de saisie en ligne, et pour les versions PDF à imprimer.
-						</span>
-
 						<partition-order ng-model="element.order" partitions="element.partitions" distribution="element.distribution"></partition-order>
+
+						<span class="help-block">
+							<i class="fa fa-info-circle"></i>
+							{{'project.collection_edit_help_order'|translate}}
+						</span>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
+
+	<a class="btn btn-default" ng-click="newVariable()">
+		<i class="fa fa-plus"></i>
+		<span translate="project.add_variable"></span>
+
+	</a>
+<br/>
+<br/>
 
 </form>
 
 <div class="pull-right">
 	<button ng-click="deleteForm()" ng-if="master.forms[currentFormIndex]" class="btn btn-danger">
 		<i class="fa fa-times"></i>
-		<span translate="shared.delete"></span>
+		<span translate="project.delete_form"></span>
 	</button>
 </div>
