--- a/client/dev/partials/projects/structure/collection-form-list.html
+++ b/client/dev/partials/projects/structure/collection-form-list.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.structure.basics" ng-bind="project.name"></a></li>
+	<li><a ui-sref="main.project.structure.basics" ng-bind="project.name|maxLength:50"></a></li>
 	<li class="active" translate="project.collection_form_list"></li>
 </ol>
 
@@ -12,18 +12,17 @@
 <table class="table table-bordered table-stripped table-condensed">
 	<thead>
 		<tr>
-			<th></th>
+			<th style="width: 30px"></th>
 			<th translate="shared.name"></th>
 			<th translate="shared.start"></th>
 			<th translate="shared.end"></th>
 			<th translate="project.periodicity"></th>
 			<th translate="project.collect"></th>
-			<th></th>
 		</tr>
 	</thead>
 	<tbody ng-if="project.forms.length == 0">
 		<tr>
-			<td colspan="8" style="text-align: center" translate="project.no_forms"></td>
+			<td colspan="7" style="text-align: center" translate="project.no_forms"></td>
 		</tr>
 	</tbody>
 	<tbody ng-if="project.forms.length != 0" ng-sortable="{handle: '.handle'}">
@@ -42,17 +41,11 @@
 			
 			<td>{{'project.periodicities.' + form.periodicity|translate}}</td>
 			<td>{{'project.collects.' + form.collect|translate}}</td>
-			<td>
-				<a class="btn btn-danger btn-xxs" pdf-export-source="form">
-					<i class="fa fa-file-pdf-o"></i>
-					<span translate="shared.download"></span>
-				</a>
-			</td>
  		</tr>
 	</tbody>
 	<tfoot>
 		<tr>
-			<td colspan="8" style="text-align: center">
+			<td colspan="7" style="text-align: center">
 				<a class="btn btn-default btn-xs" ng-click="createForm()">
 					<i class="fa fa-plus"></i>
 					<span translate="shared.add"></span>
